# langsketch

./: .gitignore  DATABRICKS_INTEGRATION.md  README.md  SETUP.md  databricks.js  electron-builder.json  index.html  logo-converter.html  logo-cropper.html  main.js  package-lock.json  package.json  renderer.js  setup-databricks.js  styles.css
agents/: data_processor.json  evaluator.json  model_trainer.json  visualizer.json
analytics/: index.html  styles.css
backend/: README.md  pyproject.toml
backend/src/: main.py  requirements.txt  send_files.py
backend/src/agent_runner/: agent_models.py  agent_runtime.py  blackbox.py  deimos.py  deimos_wrapper.py  llm_router.py  make_agent.py  tool_loader.py  utilities.py
backend/src/models/: agent.py
backend/src/templates/: TestAgent.json
css/: analytics.css
frontend_data_displayed/: config.js  databricks.js  env.example  package-lock.json  package.json  styles.css
js/: agents-tab.js  agents.js  analytics-tab.js  canvas_connections.js  canvas_core.js  credentials_modals.js  databricks-tab.js  file_utilities.js  flow_compile.js  fs_project.js  functions_browser.js  init.js  ipc_window.js  modal_utilities.js  settings_and_nav.js  state.js
js/analytics/: config.js  databricks.js  renderer.js
