[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asteval>=1.0.6",
    "dateparser>=1.2.2",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "pint>=0.25",
    "pydantic>=2.11.8",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
